<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/wizard_start_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            style="@style/wizard_static_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingBottom="5dp"
                android:text="@string/page_title_text"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/ll_fragment_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_title"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ff666666" />

                <TextView
                    android:id="@+id/fragment_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/page_status_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ff666666" />
            </LinearLayout>

            <TextView
                android:id="@+id/fragment_intro"
                style="@style/wizard_intro_style"
                android:layout_below="@+id/ll_fragment_status" />

            <LinearLayout
                android:id="@+id/ll_fragment_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_intro"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/warning" />

                <TextView
                    android:id="@+id/fragment_warning"
                    style="@style/wizard_warning_style" />

            </LinearLayout>

            <TextView
                android:id="@+id/fragment_contents"
                style="@style/wizard_content_style"
                android:layout_below="@+id/ll_fragment_warning" />

            <Button
                android:id="@+id/b_actionStopAlert"
                style="@style/activate_disguise_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_contents"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawable_wizard_button"
                android:text="@string/page_button_action_text"
                android:visibility="gone" />

            <org.iilab.pb.common.NestedListView
                android:id="@+id/fragment_action_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/b_actionStopAlert"
                android:divider="@android:drawable/screen_background_light_transparent" />

            <org.iilab.pb.common.NestedListView
                android:id="@+id/fragment_item_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_action_list"
                android:layout_marginTop="10dp" />
        </RelativeLayout>

    </ScrollView>
</LinearLayout>
